--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_auth: ^4.15.3
   firebase_analytics: ^10.7.4
   bloc: ^8.1.2
+  sqflite: ^2.2.8+4
+  path_provider: ^2.1.0
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +54,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  test: ^1.21.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
